--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,9 +2,9 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Rongbin Wang
     - name: Date of Birth
-      value: 14th March 1879
+      value: 25th December 2001
     - name: Languages
       value: English, German
 
