--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ last_name: Wang
 email: wangrongbin@bupt.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A BUPT IoT student.
-footer_text: >
+footer_text: 
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
