--- a/_config.yml
+++ b/_config.yml
@@ -119,8 +119,8 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: 紫藤阁 # blog_name will be displayed in your blog page
+blog_description: 人生若只如初见，何事秋风悲画扇。
 permalink: /blog/:year/:title/
 
 # Pagination
