--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Rongbin
-middle_name: h
-last_name: Wang
+middle_name: Wang
 email: wangrongbin@bupt.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A BUPT IoT student.
