--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: Wang
 email: wangrongbin@bupt.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A BUPT IoT student.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+keywords:   # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
