--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,93 +5,117 @@
       value: Rongbin Wang
     - name: Date of Birth
       value: 25th December 2001
-    - name: Languages
-      value: English, German
+    - name: Major
+      value: Internet of Things Engineering
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Undergraduate
+      institution: Beijing University of Posts and Telecommunications
+      year: 2021 - 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - Major in IoT.
+        - title: Post
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+            - Class publicity committee member.
+    - title: High School
+      institution: Mianyang Nanshan High School
+      year: 2017 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        - title: Post
+          contents:
+            - Class monitor.
+            - Class sports committee member.
+            - President of Drama Club.
+            - Station master of the college entrance examination workstation.(Serving during undergraduate studies)
+    - title: Middle School
+      institution: Mianyang Experimental Middle School
+      year: 2014 - 2017
+      description:
+        - title: Post
+          contents:
+            - President of the Student Union.
+            - Class monitor.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Lab Intern
+      institution: Beijing Key Lab of Intelligent Telecommunication Software and Multimedia
+      year: September 2023 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - My supervisor is Dr. Zheng Xiaolong. The academic leader of the laboratory is Dr. Ma Huadong.
+        - Based on laboratory related research, I have completed the development of CTC communication decoding programs and system construction from Zigbee to Wifi.
+        - Currently, I am preparing for my research direction.
+        - title: Research Direction.
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            - Wireless networking -- Cross-technology communication.
+
+    - title: Research Assistant
+      institution: Beijing Orillusion Technology Co., Ltd
+      year: September 2022 - September 2023
       description:
-        - Description 1.
-        - Description 2.
+        - Utilizing the engine to combine software and hardware.
+        - Working with the team to create demos.
+        - Writing engine documentation in both Chinese and English.
+        - Translating the official English documents of W3C's WebGPU into Chinese.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Manage members
+      institution: Mianyang Blueprint Plan Education Institution
+      year: January 2022 - Present
       description:
+        - Refer to the *teaching* section for details.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Honors and Awards During Undergraduate
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
+    - year: 2023
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Second prize of the 15th Mathematics competition of Chinese College Students.
+        - Second Prize Scholarship
+    - year: 2022
       items: 
-        - Max Planck Medal
+        - Third prize of the 15th Mathematics competition of Chinese College Students.
+        - Second Prize Scholarship
+        - The paper "Artistic Intelligence Brings New Opportunity to the Education Industry" was selected by the university to participate in the MIC "Simulation International Conference" and was included.
+        - Third Prize of the "Chuyan Plan" Competition of BUPT
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Wireless networking
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Cross-technology communication.
+        - Perception.
+    - title: Intelligent computing
       items:
-        - Description 1.
-        - Description 2.
+        - Intelligent sensing.
+        - Embedded Development.
+
+- title: Representative projects
+  type: list
+  contents:
+    - title: 'Qiongyou'-- Hainan Tourism Exploration Assistant Based on WeChat Mini Program and Al
+      institution: Project leader
+      year: June 2023 - Present
+      description:
+        - My role is Building Al models and WeChat mini programs, and leading the team.
+    
+    - title: "Yourong": Integrated Home Intelligent Control Platform
+      institution: Project co-leader
+      year: October 2022 -April 2023
+      description:
+        - My role is Project planning, network communication, and WebGPU development.
+    
+    - title: 2022 Winter Vacation Training Camp of uinnova Technologies
+      institution: Camper
+      year: January 2022
+      description:
+        - I learned to use ThingJS to build a digital twin platform for industrial parks.
+        - During the participation period, I successfully completed the course tasks and final assessment, and obtained the Digital Twin Development Engineer (Junior) Certificate.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Reading, Watching movies, etc.
