--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: Wang
 email: wangrongbin@bupt.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A BUPT IoT student.
-keywords:   # add your own keywords or leave empty
+keywords: personal website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -100,7 +100,7 @@ zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
 contact_note: >
-  If you are interested in any aspect, please contact me!
+  Please contact me if you have any questions or interests!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
