--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -41,42 +41,45 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Lab Intern
+      institution: Beijing Key Lab of Intelligent Telecommunication Software and Multimedia
+      year: September 2023 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - My supervisor is Dr. Zheng Xiaolong. The academic leader of the laboratory is Dr. Ma Huadong.
+        - Based on laboratory related research, I have completed the development of CTC communication decoding programs and system construction from Zigbee to Wifi.
+        - Currently, I am preparing for my research direction.
+        - title: Research Direction.
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            - Wireless networking -- Cross-technology communication.
+
+    - title: Research Assistant
+      institution: Beijing Orillusion Technology Co., Ltd
+      year: September 2022 - September 2023
       description:
-        - Description 1.
-        - Description 2.
+        - Utilizing the engine to combine software and hardware.
+        - Working with the team to create demos.
+        - Writing engine documentation in both Chinese and English.
+        - Translating the official English documents of W3C's WebGPU into Chinese.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Manage members
+      institution: Mianyang Blueprint Plan Education Institution
+      year: January 2022 - Present
       description:
+        - Refer to the *teaching* section for details.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Honors and Awards During Undergraduate
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - year: 2023
+      items: 
+        - Second prize of the 15th Mathematics competition of Chinese College Students.
+        - Second Prize Scholarship
+    - year: 2022
+      items: 
+        - Third prize of the 15th Mathematics competition of Chinese College Students.
+        - Second Prize Scholarship
+        - The paper "Artistic Intelligence Brings New Opportunity to the Education Industry" was selected by the university to participate in the MIC "Simulation International Conference" and was included.
+        - Third Prize of the "Chuyan Plan" Competition of BUPT
 
 - title: Honors and Awards
   type: time_table
