--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -62,7 +62,7 @@
         - Translating the official English documents of W3C's WebGPU into Chinese.
 
     - title: Mianyang Blueprint Plan Education Institution
-      institution: Manage members
+      institution: Management team members
       year: 2022.1 - Present
       description:
         - Refer to the teaching section for details.
